--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
